--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@polymer/iron-pages": "^3.0.0-pre.15",
     "@polymer/iron-selector": "^3.0.0-pre.15",
     "@polymer/paper-button": "^3.0.0-pre.15",
+    "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.0-pre.15",
     "@polymer/paper-input": "^3.2.1",
     "@polymer/polymer": "^3.0.0",
